[package]
name = "rust-cucumber-demo"
version = "0.1.0"
edition = "2021"

[dependencies]
cucumber = { version = "0.20", features = ["output-json"] }
async-trait = "0.1.74"
tokio = { version = "1.34.0", features = ["full"] }
thirtyfour = "0.31.0"
futures = "0.3"
once_cell = "1.18"
regex = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[test]]
name = "cucumber"
harness = false # Allows Cucumber to print output instead of libtest

[features]
default = ["html_report"]
html_report = []

[dev-dependencies]
test-context = "0.1"
